Bug 1612401 - Prevent absolute-positioned children from contributing gap size to flexbox's inline-size. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D61622